src/objects/ffbc__PriceBookStructureEntry__c.object
<CustomObject>
    <customHelpPage>ffbc__pricebookstructureentryhelp</customHelpPage>
    <description>Links products, price books and currencies to a pricing structure. This is the equivalent of a price book entry but with variable pricing based on quantity.</description>
    <fields>
        <fullName>ffbc__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this price book structure entry is active.</description>
        <inlineHelpText>Indicates whether this price book structure entry is active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffbc__PriceBookStructureEntryId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>An identifier which is used to prevent duplicate price book structure entries.</description>
        <inlineHelpText>An identifier which is used to prevent duplicate price book structure entries.</inlineHelpText>
        <label>Price Book Structure Entry ID</label>
        <length>39</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ffbc__PriceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the price book to which this price book structure entry applies.</description>
        <inlineHelpText>Lookup to the price book to which this price book structure entry applies.</inlineHelpText>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Price Book Structure Entries</relationshipLabel>
        <relationshipName>PriceBookStructureEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__PricingStructureDescription__c</fullName>
        <description>Description of the pricing structure to which this price book structure entry applies.</description>
        <formula>ffbc__PricingStructure__r.ffbc__Description__c</formula>
        <inlineHelpText>Description of the pricing structure to which this price book structure entry applies.</inlineHelpText>
        <label>Pricing Structure Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbc__PricingStructure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the pricing structure to which this price book structure entry applies.</description>
        <inlineHelpText>Lookup to the pricing structure to which this price book structure entry applies.</inlineHelpText>
        <label>Pricing Structure</label>
        <referenceTo>ffbc__PricingStructure__c</referenceTo>
        <relationshipLabel>Price Book Structure Entries</relationshipLabel>
        <relationshipName>PriceBookStructureEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the product to which this price book structure entry applies.</description>
        <inlineHelpText>Lookup to the product to which this price book structure entry applies.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Related Price Book Structure Entries</relationshipLabel>
        <relationshipName>PriceBookStructureEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Price Book Structure Entry</label>
    <nameField>
        <displayFormat>PBSE{0000000}</displayFormat>
        <label>Price Book Structure Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Book Structure Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>